--- a/.gitignore
+++ b/.gitignore
@@ -21,8 +21,4 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.idea/.gitignore
-.idea/color-react.iml
-.idea/modules.xml
-.idea/vcs.xml
-.idea/inspectionProfiles/Project_Default.xml
+.idea
